--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 .App {
-  text-align: center;
+  background-color: blue;
 }
-
-.button{}
-
-
-.MemeTemplate{}
+.App > div {
+  background-color: aqua;
+}
