--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
 .App {
-  background-color: blue;
+  margin: 0;
+  background-color: grey;
+  padding: 40px;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 .App > div {
-  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  padding: 20px;
+  margin: 40px;
+  margin-bottom: 24px;
+  width: 100px;
+  height: 50px;
 }
