--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,13 @@
   background-color: grey;
   padding: 40px;
   height: 100vh;
-  align-items: center;
+  vertical-align: middle;
+  display: inline-block;
+  /*   align-items: center;
+ */
   justify-content: center;
 }
-.App > div {
+/* .App > div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,4 +19,6 @@
   margin-bottom: 24px;
   width: 100px;
   height: 50px;
+} */
+.TextButton {
 }
